Переработал подход к путям. Добавил эндпоинт для синхронизации карточек. Настройка Language стала Locale.
