# docs/swagger.json
@@ -114,7 +114,7 @@
                 }
             }
         },
-        "/auth/{id}": {
+        "/auth/{user_id}": {
             "get": {
                 "security": [
                     {
@@ -136,7 +136,7 @@
                     {
                         "type": "string",
                         "description": "User ID",
-                        "name": "id",
+                        "name": "user_id",
                         "in": "path",
                         "required": true
                     }
@@ -195,7 +195,7 @@
                     {
                         "type": "string",
                         "description": "User ID",
-                        "name": "id",
+                        "name": "user_id",
                         "in": "path",
                         "required": true
                     }
@@ -222,7 +222,56 @@
                 }
             }
         },
-        "/decks": {
+        "/folders/{folder_id}": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "fetches the folder from the database",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "folders"
+                ],
+                "summary": "Get single folder by id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Folder ID",
+                        "name": "folder_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/FolderResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/HTTPError"
+                        }
+                    }
+                }
+            }
+        },
+        "/folders/{folder_id}/decks": {
             "post": {
                 "security": [
                     {
@@ -241,6 +290,13 @@
                 ],
                 "summary": "Create new deck",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Folder ID",
+                        "name": "folder_id",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "description": "Create deck data",
                         "name": "createDeckData",
@@ -273,7 +329,7 @@
                 }
             }
         },
-        "/decks/{id}": {
+        "/folders/{folder_id}/decks/{deck_id}": {
             "get": {
                 "security": [
                     {
@@ -294,8 +350,15 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Folder ID",
+                        "name": "folder_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "Deck ID",
-                        "name": "id",
+                        "name": "deck_id",
                         "in": "path",
                         "required": true
                     }
@@ -309,12 +372,6 @@
                     },
                     "400": {
                         "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/HTTPError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/HTTPError"
                         }
@@ -341,8 +398,15 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Folder ID",
+                        "name": "folder_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "Deck ID",
-                        "name": "id",
+                        "name": "deck_id",
                         "in": "path",
                         "required": true
                     },
@@ -378,14 +442,14 @@
                 }
             }
         },
-        "/folders/{id}": {
+        "/folders/{folder_id}/decks/{deck_id}/cards": {
             "get": {
                 "security": [
                     {
                         "Bearer": []
                     }
                 ],
-                "description": "fetches the folder from the database",
+                "description": "fetches cards of the deck from the database",
                 "consumes": [
                     "application/json"
                 ],
@@ -393,14 +457,21 @@
                     "application/json"
                 ],
                 "tags": [
-                    "folders"
+                    "cards"
                 ],
-                "summary": "Get single folder by id",
+                "summary": "Get all deck's cards",
                 "parameters": [
                     {
                         "type": "string",
                         "description": "Folder ID",
-                        "name": "id",
+                        "name": "folder_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Deck ID",
+                        "name": "deck_id",
                         "in": "path",
                         "required": true
                     }
@@ -409,7 +480,70 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/FolderResponse"
+                            "$ref": "#/definitions/CardsResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/HTTPError"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "adds card without id, updates card with id, deletes card if it's not presented inside the request",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "cards"
+                ],
+                "summary": "Synchronizes cards",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Folder ID",
+                        "name": "folder_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Deck ID",
+                        "name": "deck_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Sync cards data",
+                        "name": "syncCardsRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/SyncCardsRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/BasicResponse"
                         }
                     },
                     "400": {
@@ -449,6 +583,21 @@
                 },
                 "frontSide": {
                     "type": "string"
+                }
+            }
+        },
+        "CardsResponse": {
+            "type": "object",
+            "properties": {
+                "cards": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/Card"
+                    }
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Successfully"
                 }
             }
         },
@@ -599,6 +748,20 @@
                 "type": "string"
             }
         },
+        "SyncCardsRequest": {
+            "type": "object",
+            "required": [
+                "cards"
+            ],
+            "properties": {
+                "cards": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/Card"
+                    }
+                }
+            }
+        },
         "TokenResponse": {
             "type": "object",
             "properties": {
@@ -614,18 +777,18 @@
         },
         "UpdateDeckRequest": {
             "type": "object",
+            "required": [
+                "accessType",
+                "name"
+            ],
             "properties": {
-                "content": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/Card"
-                    }
-                },
-                "deckId": {
-                    "type": "string"
+                "accessType": {
+                    "type": "string",
+                    "example": "public"
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "My new deck"
                 }
             }
         },
